<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
     android:id="@+id/addTicketFragment"
     android:title="@string/Tickets"
     android:icon="@drawable/ic_ticket"
        />
    <item
        android:id="@+id/updateTicketFragment"
        android:title="@string/Update"
        android:icon="@drawable/ic_update"/>
    <item
        android:id="@+id/deleteTicketFragment"
        android:title="@string/Delete"
        android:icon="@drawable/ic_delete_icon"/>

    <item
        android:id="@+id/noteTicketFragment"
        android:title="@string/Note"
        android:icon="@drawable/notes_task_icon_133450"/>
    <item
        android:id="@+id/loginFragment"
        android:title="@string/Login"
        android:icon="@drawable/ic_login_icon"/>

</menu>